# kube-query-tool

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: constant.rs  kubernetes.rs  lib.rs  resource.rs  resource_collection.rs  resource_type.rs
