[package]
name = "kube-query-tools"
version = "0.1.0"
edition = "2021"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
description = "Kube Query Tool"
readme = "README.md"
categories = [""]
keywords = ["Kubernetes", "Query", "Resource-Query"]
license = "MIT"
repository = "https://github.com/nebula-technologies/kube-query-tool.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube-resource-extras = { version = "0.1.1", features = ["istio"] }
serde = "1.0.137"
serde_derive = "1.0.137"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_22"] }
kube-core = "0.71"
kube = { version = "0.71", features = ["runtime","derive", "admission"] }
railsgun = "1.0.3"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
regex = { version = "1.5.6", features = ["use_std"] }
data-query = { version = "0.1.6", features = ["jq"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["rt"] }
